compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__list_one.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 321
expression: "\npub fn main(x) {\n  case x {\n    [_] -> 1\n  }\n}\n"
---

warning: Inexhaustive patterns
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     [_] -> 1
5 │ │   }
  │ ╰───^

This case expression does not have patterns for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing clauses are:

    [] -> todo
    [_, _, ..] -> todo

In a future version of Gleam this will become a compile error.


