compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__list_zero_one_two.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 348
expression: "\npub fn main(x) {\n  case x {\n    [] -> 1\n    [_] -> 1\n    [_, _] -> 1\n  }\n}\n"
---

warning: Inexhaustive patterns
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     [] -> 1
5 │ │     [_] -> 1
6 │ │     [_, _] -> 1
7 │ │   }
  │ ╰───^

This case expression does not have patterns for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing clauses are:

    [_, _, _, ..] -> todo

In a future version of Gleam this will become a compile error.


